<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.wwsis.engapp.LEKCJE"
    android:orientation="vertical"
    android:id="@+id/LEKCJE">
<!-- <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"> -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <TextView android:text="@string/LISTA"
            android:layout_width="362dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

<!--
    </LinearLayout>
    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@drawable/domek"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1"
            android:text="@string/DOM_RZ"
            android:id="@+id/DOM_RZ"
            android:layout_margin="10dp"
            android:onClick="Dom_RZ"
            />
        <Button
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@drawable/domek"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1"
            android:text="@string/DOM_CZ"
            android:id="@+id/DOM_CZ" />
      <!--  <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DOM_ZD"
            android:id="@+id/DOM_ZD" />
            -->

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">


        <Button
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@drawable/praca"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/PRACA_RZ"
            android:id="@+id/PRACA_RZ" />
        <Button
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@drawable/praca"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1"
            android:text="@string/PRACA_CZ"
            android:id="@+id/PRACA_CZ" />
   <!--     <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PRACA_ZD"
            android:id="@+id/PRACA_ZD" />
            -->

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">


        <Button
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@drawable/sklep"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/SKLEP_RZ"
            android:id="@+id/SKLEP_RZ" />
        <Button
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@drawable/sklep"
            android:textStyle="bold"
            android:gravity="top"
            android:layout_weight="1"
            android:text="@string/SKLEP_CZ"
            android:id="@+id/SKLEP_CZ" />


       <!-- <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SKLEP_ZD"
            android:id="@+id/SKLEP_ZD" />
            -->

    </LinearLayout>

    </LinearLayout>
</ScrollView>

