<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Ekran1"
    android:orientation="vertical"
    android:id="@+id/Ekran1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="top">


    <TextView android:text="@string/Witaj"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="24dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lekcje"
            android:id="@+id/button1"
            android:onClick="WlaczLekcje"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Powtorki"
            android:id="@+id/button2"
            android:onClick="WlaczPowtorki"/>


    </LinearLayout>

    <Button
        android:onClick="noweSlowko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nowe słówko"
        android:id="@+id/noweSlowko"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
