<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wwsis.engapp.POWTORKI"
    android:id="@+id/POWTORKI">>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="top"> -->


        <TextView android:text="@string/POWTORKI"
            android:layout_width="362dp"
            android:layout_height="102dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="24dp"
            android:id="@+id/komentarz"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView android:text="Kliknij NEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="24dp"
                android:textColor="@color/Czerwony"
                android:id="@+id/word"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/WPISZ"
                    android:id="@+id/editTexty" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SPRAWDZ"
                android:id="@+id/DOM_ZD"
                android:onClick="sprawdzam"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="NEXT"
            android:id="@+id/next"
            android:layout_margin="10dp"
            android:onClick="nastepne"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Wyświetl Poprawną"
            android:id="@+id/poprawna"
            android:layout_margin="5dp"
            android:onClick="poprawna"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Usuń z powtórek"
            android:id="@+id/usun"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:onClick="usun"
            />


    </LinearLayout>

</LinearLayout>
