<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/POWTORKI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wwsis.engapp.View_2_replays">


    <TextView
        android:id="@+id/komentarz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:gravity="center_vertical|center|center_horizontal"
        android:text="@string/POWTORKI"
        android:textSize="24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/flaga1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/flaga1" />

                <TextView
                    android:id="@+id/word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#fffcfdd0"
                    android:text="Kliknij Następne"
                    android:textColor="@color/Czerwony"
                    android:textSize="24dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                ImageButton
                android:id="@+id/imageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/arrow"
                android:onClick="shift"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/flaga2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/flaga2" />

                <EditText
                    android:id="@+id/editTexty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#fffcfdd0"
                    android:hint="@string/WPISZ" />

            </LinearLayout>

            <TextView
                android:id="@+id/licznik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="5dp"
                android:text="0/0"
                android:textColor="@color/Niebieski"
                android:textSize="24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/DOM_ZD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="10"
            android:background="@drawable/buttonshape"
            android:elegantTextHeight="false"
            android:onClick="sprawdzam"
            android:text="@string/SPRAWDZ"
            android:textColor="#fffdfdfd"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50">

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape1"
            android:onClick="nastepne"
            android:text="następne"
            android:textColor="#fffdfdfd"
            android:textSize="32dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30">

        <Button
            android:id="@+id/usun"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="40"
            android:background="@drawable/buttonshape"
            android:onClick="usun"
            android:text="Usuń \n z listy"
            android:textColor="#fffdfdfd"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/poprawna"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="60"
            android:background="@drawable/buttonshape"
            android:onClick="poprawna"
            android:text="Wyświetl \n Poprawną"
            android:textColor="#fffdfdfd"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>